<resources>
    <string name="app_name">SocialNET</string>

    <!-- PROFILE -->
    <string name="personal_information">Información personal</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="email">Correo electrónico</string>
    <string name="phone">Telefono</string>
    <string name="country">País</string>
    <string name="sex">Sexo</string>
    <string name="address">Dirección</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="id">DNI</string>
    <string name="save">Guardar</string>
    <string name="wallet">Billetera electrónica</string>
    <string name="trustinvesting_wallet">Billetera electrónica de TrustInvesting</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="new_password">Contraseña nueva</string>
    <string name="retype_password">Repita contraseña nueva</string>

    <!-- LOGIN & SIGNUP -->
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Entrar</string>
    <string name="no_account_yet">No tengo cuenta</string>
    <string name="signup">Registrarme</string>
    <string name="sign_in_to_continue">Inserte sus datos para continuar</string>
    <string name="retype_password_sign">Repita contraseña</string>
    <string name="sing_up">Crear cuenta nueva</string>
    <string name="i_have_an_account">Ya tengo cuenta</string>
    <string name="register_complete_1">Su cuenta ha sido creada correctamente y se mantendrá desactivada hasta que se procese el pago. Luego será informado de la activación de su cuenta.</string>
    <string name="register_complete_2">Proceda a efectuar el pago de 1 USDT a la siguiente dirección:</string>
    <string name="register_step_1">Paso 1: Enviar a la wallet de arriba entre 1 y 10 USDT</string>
    <string name="register_step_2">Paso 2: Enviar un SMS a 52994889 con el nombre de usuario de su cuenta para poder activarla</string>
    <string name="register_hint_1">Dudas, quejas y/o sugerencias enviarlas a jcarrasco96@nauta.cu</string>

    <!-- DIALOGS -->
    <string name="submit">Publicar</string>
    <string name="cancel">Cancelar</string>
    <string name="write_your_post_here">Escriba su publicación aquí.</string>

    <!-- MENU -->
    <string name="mnu_profile">Editar perfil</string>
    <string name="mnu_about">Acerca de…</string>
    <string name="mnu_logout">Cerrar sesión</string>

    <string name="title_home">Inicio</string>
    <string name="title_profile">Perfil</string>

    <string name="posts">Publicaciones</string>
    <string name="comments">Comentarios</string>

    <string-array name="sex">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string name="title_activity_el_pene_mio">ElPeneMioActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>