<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/spacing_medium"
    app:cardElevation="@dimen/spacing_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_large"
        android:paddingTop="@dimen/spacing_large"
        android:paddingRight="@dimen/spacing_large"
        android:paddingBottom="@dimen/spacing_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/blue_grey_300"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtUsername"
            style="@style/EditText_Flat_Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_round_bg_primary"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:text="" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_medium" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtPassword"
            style="@style/EditText_Flat_Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_round_bg_primary"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:text="" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_medium" />

        <Button
            android:id="@+id/btnSigIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_primary"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <ProgressBar
            android:id="@+id/progressLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_account_yet"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/blue_grey_300" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_sign_up"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="?attr/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>