<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_middle">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_post"
            style="@style/EditText_Flat_Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_round_bg_accent"
            android:gravity="top"
            android:hint="@string/write_your_post_here"
            android:inputType="textMultiLine"
            android:lines="4"
            android:minHeight="48dp"
            android:padding="@dimen/spacing_medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/spacing_medium"
        android:paddingEnd="@dimen/spacing_medium">

        <ProgressBar
            android:id="@+id/progressDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_cancel"
            style="@style/Button.Accent.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_submit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/submit" />

    </LinearLayout>

</LinearLayout>