<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="@dimen/spacing_medium"
    app:cardElevation="@dimen/spacing_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_middle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:text="@string/change_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/item_old_password"
                style="@style/EditText_Flat_Grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_round_bg_accent"
                android:hint="@string/current_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="@dimen/spacing_middle" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/item_password"
                style="@style/EditText_Flat_Grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_round_bg_accent"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="@dimen/spacing_middle" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/item_password2"
                style="@style/EditText_Flat_Grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_round_bg_accent"
                android:hint="@string/retype_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="@dimen/spacing_middle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center_vertical"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressUserChangePassword"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/spacing_middle"
                android:layout_marginLeft="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_middle"
                android:layout_marginRight="@dimen/spacing_middle"
                android:layout_weight="1"
                android:indeterminate="true"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/btnChangePassword"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:focusable="true"
                android:padding="@dimen/spacing_middle"
                app:srcCompat="@drawable/ic_save"
                app:tint="?attr/colorSecondary" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>